# soda-tools

./: pyproject.toml
src/tecumseh/: parser.py  reorder.py
