[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tecumseh"
authors = [{ name = "Jonathan Olsten", email = "jonathan.olsten@gmail.com" }]
description = "Some CLI utilities"
readme = "README.md"
requires-python = ">=3.8"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "setuptools",
    "setuptools-scm",
    "build",
    "wheel",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "mypy",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["tecumseh*"]

[tool.setuptools_scm]
parentdir_prefix_version = "tecumseh-"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=tecumseh --cov-report html"
testpaths = ["tests"]
